@@ -1,3 +1,4 @@
 .precomp/
 /OneSeq-*
 /releases
+*.rakucov
