@@ -1,7 +1,7 @@
 name = OneSeq
 
 [ReadmeFromPod]
-filename = lib/OneSeq.rakumod
+filename = doc/OneSeq.rakudoc
 
 [UploadToZef]
 
