@@ -1,14 +1,3 @@
-use ForwardIterables:ver<0.0.3+>:auth<zef:lizmat>;
-use ReverseIterables:ver<0.0.1+>:auth<zef:lizmat>;
-
-my sub infix:«>>>»(**@iterables) is export is assoc<list> is equiv(&[~]) {
-    Seq.new: ForwardIterables.new(@iterables)
-}
-
-my sub infix:«<<<»(**@iterables) is export is assoc<list> is equiv(&[~]) {
-    Seq.new: ReverseIterables.new(@iterables)
-}
-
 =begin pod
 
 =head1 NAME
@@ -39,7 +28,7 @@ say @e;  # [1 2 3 4 5 6 7 8 9 10]
 
 =head1 DESCRIPTION
 
-C<OneSeq> is a module that provides two infix operators: C«>>>» and
+The C<OneSeq> distribution provides two infix operators: C«>>>» and
 C«<<<», each of which produces a single C<Seq> object from the
 given arguments.
 
@@ -87,7 +76,7 @@ deal to me!
 
 =head1 COPYRIGHT AND LICENSE
 
-Copyright 2024 Elizabeth Mattijsen
+Copyright 2024, 2025 Elizabeth Mattijsen
 
 This library is free software; you can redistribute it and/or modify it under the Artistic License 2.0.
 
